--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,17 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+<view>
+  <MyNav/>
+  <view class="nav">
+    <scroll-view scroll-x="true" >
+      <text bindtap="active" data-set='1' class="{{1===index?'active':''}}">首页</text>
+      <text bindtap="active" data-set='2' class="{{2===index?'active':''}}">动画</text>
+      <text bindtap="active" data-set='3' class="{{3===index?'active':''}}">番剧</text>
+      <text bindtap="active" data-set='4' class="{{4===index?'active':''}}">国产</text>
+      <text bindtap="active" data-set='5' class="{{5===index?'active':''}}">原创</text>
+      <text bindtap="active" data-set='6' class="{{6===index?'active':''}}">舞蹈</text>
+      <text bindtap="active" data-set='7' class="{{7===index?'active':''}}">科技</text>
+      <text bindtap="active" data-set='8' class="{{8===index?'active':''}}">数码</text>
+      <text bindtap="active" data-set='9' class="{{9===index?'active':''}}">游戏</text>
+      <text bindtap="active" data-set='0' class="{{0===index?'active':''}}">直播</text>
+    </scroll-view>
   </view>
 </view>
