--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,16 @@
-/**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.nav{
+  width: 100%;
+  height: 80rpx;
+  white-space: nowrap
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.nav text{
+  display: inline-block;
+  height: 50rpx;
+  font-size: 30rpx;
+  margin:0 45rpx;
+  color: #999999;
 }
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+.active{
+  color: #fb7299 !important;
+  border-bottom: 2px solid #fb7299
 }
