--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,16 +1,29 @@
 .nav{
   width: 100%;
   height: 80rpx;
-  white-space: nowrap
+  white-space: nowrap;
+}
+.nav scroll-view{
+  height: 80rpx;
 }
 .nav text{
   display: inline-block;
-  height: 50rpx;
   font-size: 30rpx;
   margin:0 45rpx;
+  line-height: 65rpx;
   color: #999999;
 }
 .active{
   color: #fb7299 !important;
   border-bottom: 2px solid #fb7299
+}
+swiper{
+  width: 95%;
+  margin: 0 auto;
+  height: 202.5rpx;
+  border-radius: 20rpx;
+  overflow: hidden;
+}
+swiper image{
+  width: 100%;
 }
