--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,7 +1,12 @@
+
 .nav{
   width: 100%;
   height: 80rpx;
   white-space: nowrap;
+  position:fixed;
+  top: 100rpx;
+  background-color: #fff;
+  z-index: 999;
 }
 .nav scroll-view{
   height: 80rpx;
@@ -23,7 +28,47 @@ swiper{
   height: 202.5rpx;
   border-radius: 20rpx;
   overflow: hidden;
+  margin-top: 200rpx;
 }
 swiper image{
   width: 100%;
+}
+.main{
+  margin-top: 15rpx;
+}
+.main_view{
+  margin-left:2%;
+  height: 300rpx;
+  width: 47%;
+  float: left;
+  position: relative;
+}
+.main_img{
+  width: 100%;
+  height: 65%;
+  border-radius: 15rpx;
+}
+.main text{
+  font-size: 25rpx;
+}
+.main_playCount,.main_commentCount{
+  color: #fff;
+}
+.main_playCount{
+  position: absolute;
+  z-index: 9;
+  left: 10rpx;
+  bottom: 110rpx;
+}
+.main_commentCount{
+  position: absolute;
+  z-index: 9;
+  right: 10rpx;
+  bottom: 110rpx;
+}
+.main_desc{
+  display: block;
+  height: 90rpx;
+  overflow: hidden;
+  margin-top: -20rpx;
 }
